--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h1>All done</h1>
       <form>
         <label for="enterName">Enter initials:</label>
-        <textarea name="enterName" id="enterName"></textarea>
+        <textarea name="enterName" id="enterName" placeholder="enter your name"></textarea>
       </form>
       <button id="submitButton">Submit</button> 
     </section>
