draft code with timer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ul id="navBar">
         <li id="navScore">View high Scores</li>
-        <li id="timer">Time remaining:</li>
+        <li id="timer">Time: <span id="timeLeft">100</span></li>
       </ul>
     </nav>
   </header>
