--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
 
     <section id="scoreBoard" style="display: none;">
       <h1>High scores</h1>
-      <div>
+      <!-- <div>
         <p>Name:<span id="savedName"></span></p>
         <p>Score:<span id="savedScore"></span></p>
-      </div>
+      </div> -->
+      <ul id="playerScore"></ul>
+
       <button id="goBack">Go back</button>
       <button id="clearScore">Clear high scores</button>
 
