added feedback icon

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
     </section>
 
+    <img id="pika" class="feedback hide" src="./asset/img/pikachu-transparent-29.gif" alt="pikachu">
     <div id="feedback" class="feedback hide"></div>
 
   </main>
